# market-data-toolkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
examples/portfolio_pipeline/: README.md  aapl_ibkr.csv  aapl_normalized.csv  expected_portfolio.csv  features.csv  msft_ibkr.csv  msft_normalized.csv  portfolio.csv
src/market_data_toolkit/: __init__.py  cli.py  features.py  ibkr.py  io.py  models.py  normalize.py  validation.py
tests/: test_cli.py  test_combine.py  test_ibkr.py  test_io.py  test_transformations.py  test_validation.py
