[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "market-data-toolkit"
version = "0.1.0"
description = "Utilities for ingesting, validating, and transforming OHLCV-style market data."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Fabrizio Donati" }
]
dependencies = []

[project.optional-dependencies]
ibkr = [
  "ibapi>=9.81.1"
]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6"
]

[project.scripts]
mdtk = "market_data_toolkit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/market_data_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["market_data_toolkit"]
